@@ -178,6 +178,7 @@ void av_register_all(void)
     REGISTER_MUXER    (MXF_D10, mxf_d10);
     REGISTER_DEMUXER  (MXG, mxg);
     REGISTER_DEMUXER  (NC, nc);
+    REGISTER_DEMUXER  (NISTSPHERE, nistsphere);
     REGISTER_DEMUXER  (NSV, nsv);
     REGISTER_MUXER    (NULL, null);
     REGISTER_MUXDEMUX (NUT, nut);
